kubernetes/apps/mlflow-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow-test
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
