kubernetes/apps/mlflow-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-test
  labels:
    app: mlflow-test
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: mlflow-test
  template:
    metadata:
      annotations:
        checksum/config: fa1c8709aa0de912cb487d40452142672963e8c2ed567ee6831d471c5724b065
      labels:
        app: mlflow
        app.kubernetes.io/name: mlflow
        app.kubernetes.io/instance: mlflow-test
    spec:
      serviceAccountName: mlflow-test
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: mlflow
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
          image: "burakince/mlflow:3.7.0"
          imagePullPolicy: IfNotPresent
          command: ["mlflow"]
          args:
            - server
            - --host=0.0.0.0
            - --port=5000
            - --backend-store-uri=postgresql://
            - --default-artifact-root=./mlruns
            - --app-name=basic-auth
            - --gunicorn-opts='--log-level=info'
          ports:
            - name: mlflow
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: mlflow
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: mlflow
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
          resources:
            {}
          volumeMounts:
            - name: ini-file
              mountPath: /etc/mlflow/auth/basic_auth.ini
              subPath: auth_result.ini
              readOnly: true
      volumes:
        - name: ini-file
          emptyDir: {}
        - name: auth-ini-template-file
          configMap:
            name: mlflow-test-auth-ini-template
