kubernetes/apps/mlflow-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-test
  labels:
    app: mlflow-test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: mlflow
      protocol: TCP
      name: http
  selector:
    app: mlflow-test
