kubernetes/apps/mlflow-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-test
  labels:
    app: mlflow-test
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
    cloudflare-tunnel-ingress-controller.strrl.dev/proxy-ssl-verify: "on"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: "mlflow-test.icantkube.help"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-test
                port:
                  number: 80
